# dfc-gui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
.github/workflows/: release.yml
i18n/: en-US.ftl  zh-CN.ftl
icons/: dfc-gui.icns
locales/: en.toml  zh.toml
proto/: DataType.proto  DataTypeCOMM.proto
scripts/: generate_app_icon.py
src/: assets.rs  constants.rs  error.rs  lib.rs  main.rs
src/app/: application.rs  entities.rs  mod.rs  navigation.rs  workspace.rs
src/components/: mod.rs
src/components/composite/: mod.rs  modal.rs
src/components/composite/data_table/: column.rs  data_provider.rs  data_table.rs  mod.rs  pagination.rs
src/components/layout/: header.rs  log_panel.rs  mod.rs  shell.rs  sidebar.rs
src/components/primitives/: button.rs  checkbox.rs  mod.rs  select.rs  text_input.rs
src/connection/: config.rs  credential.rs  mod.rs  redis_config.rs
src/domain/: aggregation.rs  command.rs  config.rs  curve.rs  event_log.rs  favorite.rs  mod.rs  property.rs
src/eventing/: app_event.rs  mod.rs
src/features/: mod.rs
src/features/commands/: controller.rs  mod.rs  page.rs
src/features/data/: mod.rs
src/features/data/curve/: mod.rs
src/features/data/one_min/: mod.rs
src/features/data/ten_min/: mod.rs
src/features/events/: controller.rs  mod.rs  page.rs
src/features/home/: controller.rs  mod.rs  page.rs
src/features/properties/: controller.rs  mod.rs  page.rs
src/helpers/: action.rs  bounded.rs  filter.rs  fs.rs  macos_menu.rs  mod.rs  string.rs  updater.rs
src/i18n/: mod.rs
src/proto/: mod.rs
src/services/: events.rs  hub.rs  mod.rs  pulsar_bus.rs  redis_repo.rs  runtime.rs  service_hub.rs  supervisor.rs
src/services/database/: connection.rs  mod.rs  repository.rs
src/services/pulsar/: client.rs  consumer.rs  mod.rs  producer.rs
src/services/redis/: client.rs  consumer.rs  mod.rs
src/state/: commands_state.rs  config_state.rs  connection_state.rs  data_state.rs  events_state.rs  i18n_state.rs  log_state.rs  mod.rs  properties_state.rs  tabs_state.rs
src/states/: app.rs  config.rs  event_table.rs  fleet.rs  i18n.rs  keys.rs  mod.rs  prop_table.rs  service_table.rs  ui_event.rs  update.rs
src/theme/: colors.rs  mod.rs  typography.rs
src/utils/: config_store.rs  format.rs  mod.rs
src/views/: about_dialog.rs  config_view.rs  content.rs  keys_browser.rs  mod.rs  service_panel.rs  sidebar.rs  title_bar.rs  update_dialog.rs
