[package]
name = "dfc-gui"
version = "0.1.0"
edition = "2021"
authors = ["DFC Team"]
description = "DFC (Device Function Check) GUI Client - IoT Device Communication Simulator"
license = "MIT"

[dependencies]
# GPUI Framework
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Channel for event pump
flume = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Message Bus
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
pulsar = "6"

# Database - using sqlez from gpui's workspace
sqlez = { git = "https://github.com/zed-industries/zed", branch = "main" }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# i18n (simplified - using HashMap-based translations)

# Utilities
once_cell = "1"
parking_lot = "0.12"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

# Ring buffer for logs
ringbuf = "0.3"

[features]
default = []
test-support = ["gpui/test-support"]

[[bin]]
name = "dfc-gui"
path = "src/main.rs"

# Patches from Zed to fix dependency conflicts
[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
